--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,4 +5,6 @@ node_exporter_archive: "node_exporter-{{ node_exporter_version }}.linux-{{ arch 
 node_exporter_url: "https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version }}/{{ node_exporter_archive }}"
 node_exporter_checksum_url: "https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version }}/sha256sums.txt"
 
+node_exporter_user: "node_exporter"
+node_exporter_group: "node_exporter"
 node_exporter_install_dir: "/usr/local/bin"
