--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,7 +2,7 @@
 # handlers file for ansible-role-prometheus
   - name: "Restart Prometheus Node Exporter"
     become: true
-    ansible.builtin.systemd:
-      daemon_reload: true
+    ansible.builtin.service:
       name: node_exporter
       state: restarted
+    listen: "restart node exporter"
